crates/pcbc/tests/snapshots/route_local__local_bad_jar_path.snap
---
source: crates/pcbc/tests/route_local.rs
expression: output
---
Command: pcbc route-local --fr-jar /nonexistent/freerouting.jar board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: FreeRouting JAR not found at --fr-jar path: /nonexistent/freerouting.jar
