crates/pcbc/tests/snapshots/route_local__local_no_layout.snap
---
source: crates/pcbc/tests/route_local.rs
expression: output
---
Command: pcbc route-local board.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: No layout path defined in schematic. Add layout="path" to your module.
